--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 
+
 </head>
 <body>
+    <header class="cabecalho">
+        <div class="container">
+        <span class="cabecalho__menu-hamburger container__imagem"></span>
+        <img src="img/Logo.svg" alt="Logo da Alura Books" class="container__imagem">
+    </div>
+        <div class="container">
+        <a href="#" class=""></a><img src="./img/Favoritos.svg" alt="Meus Favritos" class="container__imagem">
+        <a href="#" class=""></a><img src="./img/Compras.svg" alt="Carrinho de Compras" class="container__imagem">
+        <a href="#" class=""></a><img src="./img/Usuário.svg" alt="Perfíl de Usuário" class="container__imagem">
+        </div
+    </header>
     
 </body>
 </html>
