--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Alura Books</title>
 
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+
     <!--CSS-->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +20,18 @@
 <body>
     <header class="cabecalho">
         <div class="container">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
         <span class="cabecalho__menu-hamburger container__imagem"></span>
+    </label>
+    <ul class="lista-menu">
+        <li class="lista-menu__titulo">Categorias</li>
+        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Programação</a></li>
+        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Front-end</a></li>
+        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Infraestrutura</a></li>
+        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Bussines</a></li>
+        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Design e UX</a></li>
+    </ul>
         <img src="img/Logo.svg" alt="Logo da Alura Books" class="container__imagem">
     </div>
         <div class="container">
