--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,29 +18,39 @@
 
 
 </head>
+
 <body>
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
             <label for="menu">
-        <span class="cabecalho__menu-hamburger container__imagem"></span>
-    </label>
-    <ul class="lista-menu">
-        <li class="lista-menu__titulo">Categorias</li>
-        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Programação</a></li>
-        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Front-end</a></li>
-        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Infraestrutura</a></li>
-        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Bussines</a></li>
-        <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Design e UX</a></li>
-    </ul>
-        <img src="img/Logo.svg" alt="Logo da Alura Books" class="container__imagem">
-    </div>
+                <span class="cabecalho__menu-hamburger container__imagem"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categorias</li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Programação</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Front-end</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Infraestrutura</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Bussines</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Design e UX</a></li>
+            </ul>
+            <img src="img/Logo.svg" alt="Logo da Alura Books" class="container__imagem">
+        </div>
         <div class="container">
-        <a href="#" class=""></a><img src="./img/Favoritos.svg" alt="Meus Favritos" class="container__imagem">
-        <a href="#" class=""></a><img src="./img/Compras.svg" alt="Carrinho de Compras" class="container__imagem">
-        <a href="#" class=""></a><img src="./img/Usuário.svg" alt="Perfíl de Usuário" class="container__imagem">
-        </div
+            <a href="#" class=""></a><img src="./img/Favoritos.svg" alt="Meus Favritos" class="container__imagem">
+            <a href="#" class=""></a><img src="./img/Compras.svg" alt="Carrinho de Compras" class="container__imagem">
+            <a href="#" class=""></a><img src="./img/Usuário.svg" alt="Perfíl de Usuário" class="container__imagem">
+        </div>
     </header>
-    
+    <section class="banner">
+        <h2 class="banner__titulo">
+            Já sabe por onde começar?
+        </h2>
+        <p class="banner__texto">
+            Encontre na sua estante o que precisa para seu desenvolvimento!
+        </p>
+        <input type="search" name="" id="" class="banner__pesquisa" placeholder="Qual será sua próxima leitura? ">
+    </section>
 </body>
+
 </html>
