criando carousel com swiper.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
+
+
 
 
 </head>
@@ -51,6 +54,49 @@
         </p>
         <input type="search" name="" id="" class="banner__pesquisa" placeholder="Qual será sua próxima leitura? ">
     </section>
+    <section class="carousel">
+        <h2 class="carousel__titulo">Ultimos Lançamentos</h2>
+
+        <!-- Slider main container -->
+        <div class="swiper">
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                  <!-- If we need pagination -->
+  
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafta e spring boot da alura books"> </div>
+                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre Liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da alura books"></div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Front-end da alura books"></div>
+                <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre Portugol da alura books"></div>
+            </div>
+          
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween:10,
+            slidesPerView: 3,
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            },
+            });
+
+    </script>
+
 </body>
 
 </html>
