--- a/index.html
+++ b/index.html
@@ -62,16 +62,20 @@
             <div class="swiper-pagination"></div>
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
-                  <!-- If we need pagination -->
-  
+                <!-- If we need pagination -->
+
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafta e spring boot da alura books"> </div>
-                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre Liderança em design da alura books"></div>
-                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da alura books"></div>
-                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Front-end da alura books"></div>
+                <div class="swiper-slide"><img src="img/ApacheKafka.png"
+                        alt="Livro sobre apache kafta e spring boot da alura books"> </div>
+                <div class="swiper-slide"><img src="img/Liderança.png"
+                        alt="Livro sobre Liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da alura books">
+                </div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Front-end da alura books">
+                </div>
                 <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre Portugol da alura books"></div>
             </div>
-          
+
 
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
@@ -102,11 +106,84 @@
         </div>
 
     </section>
+    <section class="carousel-vendas">
+        <h2 class="carousel__titulo">Mais Vendidos</h2>
 
+        <!-- Slider main container -->
+        <div class="swiper">
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- If we need pagination -->
+
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/ApacheKafka.png"
+                        alt="Livro sobre apache kafta e spring boot da alura books"> </div>
+                <div class="swiper-slide"><img src="img/Liderança.png"
+                        alt="Livro sobre Liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da alura books">
+                </div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Front-end da alura books">
+                </div>
+                <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre Portugol da alura books"></div>
+            </div>
+
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
+
+        <div class="card">
+            <div class="card__descricao">
+                <div class="descricao">
+                    <img src="./img/Estrelinhas.png" alt="Estrelas de avaliação da autora" class="descricao__imagme">
+                    <h3 class="descricao__titulo">
+                        Autora do mês
+                    </h3>
+                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                    <p class="descricao__texto">
+                        Analista de sistemas e escritora, Juliana é especialista em Front-End.
+                    </p>
+                </div>
+                <img src="./img/Perfil-escritora 1-1.png" alt="Foto da Escritora Juliana" class="descricao__imagem">
+            </div>
+            <div class="card__botoes">
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar Livro"></li>
+                    <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no Carrinho"></li>
+                </ul>
+                <a href="#" class="botoes__ancora">Saiba mais</a>
+            </div>
+        </div>
+    </section>
+    <section class="topicos">
+        <h2 class="topicos__titulo">Tópicos visitados recentemente</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item"><a href="#" class="topicos__link">Android</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Marketing Digital</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Agile</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Startups</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">HTML & CSS</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Python</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">OO</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Java</a></li>
+        </ul>
+    </section>
+    <section class="contatos">
+        <h2 class="contato__titulo">
+            Fique por dentro das novidades!
+        </h2>
+        <p class="contato__texto">
+            Atualizações de e-books, novos livros, promoções e outros.
+        </p>
+        <input type="email" name="" id="" placeholder="Cadastre seu e-mail"class="contato__email">
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
-            spaceBetween:10,
+            spaceBetween: 10,
             slidesPerView: 3,
             navigation: {
                 nextEl: '.swiper-button-next',
@@ -116,7 +193,7 @@
                 el: '.swiper-pagination',
                 type: 'bullets',
             },
-            });
+        });
 
     </script>
 
