--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <li class="topicos__item"><a href="#" class="topicos__link">Java</a></li>
         </ul>
     </section>
-    <section class="contatos">
+    <section class="contato">
         <h2 class="contato__titulo">
             Fique por dentro das novidades!
         </h2>
@@ -180,6 +180,10 @@
         </p>
         <input type="email" name="" id="" placeholder="Cadastre seu e-mail"class="contato__email">
     </section>
+    <hr>
+    <footer class="rodape"><h2 class="rodape__titulo">
+        Grupo Alura
+    </h2></footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
