--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -38,9 +38,24 @@
                 <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Design e UX</a></li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alura Books" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes__menu" class="opcoes__botao"><label for="opcoes__menu">
+            <li class="opcoes__item">Categorias</li>
+        </label>
+        <ul class="lista-menu">
+            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Programação</a></li>
+            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Front-end</a></li>
+            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Infraestrutura</a></li>
+            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Bussines</a></li>
+            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Design e UX</a></li>
+        </ul>
+            <li class="opcoes__item"> <a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"> <a href="#" class="opcoes__link">Minha estante</a></li>
+        </ul>
         <div class="container">
-            <a href="#" class=""></a><img src="./img/Favoritos.svg" alt="Meus Favritos" class="container__imagem">
+            <a href="#" class=""></a><img src="./img/Favoritos.svg" alt="Meus Favritos" class="container__imagem container__imagem--transparente">
             <a href="#" class=""></a><img src="./img/Compras.svg" alt="Carrinho de Compras" class="container__imagem">
             <a href="#" class=""></a><img src="./img/Usuário.svg" alt="Perfíl de Usuário" class="container__imagem">
         </div>
