--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -42,20 +44,21 @@
         </div>
         <ul class="opcoes">
             <input type="checkbox" id="opcoes__menu" class="opcoes__botao"><label for="opcoes__menu">
-            <li class="opcoes__item">Categorias</li>
-        </label>
-        <ul class="lista-menu">
-            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Programação</a></li>
-            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Front-end</a></li>
-            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Infraestrutura</a></li>
-            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Bussines</a></li>
-            <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Design e UX</a></li>
-        </ul>
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Programação</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Front-end</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Infraestrutura</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Bussines</a></li>
+                <li class="lista-menu__item"> <a class="lista-menu__link" href="#">Design e UX</a></li>
+            </ul>
             <li class="opcoes__item"> <a href="#" class="opcoes__link">Favoritos</a></li>
             <li class="opcoes__item"> <a href="#" class="opcoes__link">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a href="#" class=""></a><img src="./img/Favoritos.svg" alt="Meus Favritos" class="container__imagem container__imagem--transparente">
+            <a href="#" class=""></a><img src="./img/Favoritos.svg" alt="Meus Favritos"
+                class="container__imagem container__imagem--transparente">
             <a href="#" class=""></a><img src="./img/Compras.svg" alt="Carrinho de Compras" class="container__imagem">
             <a href="#" class=""></a><img src="./img/Usuário.svg" alt="Perfíl de Usuário" class="container__imagem">
         </div>
@@ -187,18 +190,55 @@
         </ul>
     </section>
     <section class="contato">
-        <h2 class="contato__titulo">
-            Fique por dentro das novidades!
-        </h2>
-        <p class="contato__texto">
-            Atualizações de e-books, novos livros, promoções e outros.
-        </p>
-        <input type="email" name="" id="" placeholder="Cadastre seu e-mail"class="contato__email">
+        <div class="contato__descricao">
+            <h2 class="contato__titulo">
+                Fique por dentro das novidades!
+            </h2>
+            <p class="contato__texto">
+                Atualizações de e-books, novos livros, promoções e outros.
+            </p>
+        </div>
+        <input type="email" name="" id="" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
     <hr>
-    <footer class="rodape"><h2 class="rodape__titulo">
-        Grupo Alura
-    </h2></footer>
+    <footer class="rodape">
+        <h2 class="rodape__titulo">
+            Grupo Alura
+        </h2>
+        <ul class="lista__rodape">
+            <li class="lista__rodape__titulo">
+                Educação
+            </li>
+            <li class="lista__rodape__item"><img src="./img/CasaDoCodigo.png" alt="Logo da casa do Código"><a href="#"
+                    class="lista__rodape__link">Casa do Código</a></li>
+            <li class="lista__rodape__item"><img src="./img/Caelum.png" alt="Logo da Caelum"><a href="#"
+                    class="lista__rodape__link">Caelum</a></li>
+                </ul>
+                <ul class="lista__rodape">
+            <li class="lista__rodape__titulo">
+                Educação Online
+            </li>
+            <li class="lista__rodape__item"><img src="./img/Alura.png" alt="Logo da Alura" ><a href="#" class="lista__rodape__link">Alura</a></li>
+            <li class="lista__rodape__item"><img src="./img/AluraEmpresas.png" alt="Logo da Alura para Empresas" ><a href="#" class="lista__rodape__link">Alura para Empresas</a></li>
+            <li class="lista__rodape__item"><img src="./img/AluraLatam.png" alt="Logo da Alura LATAM" ><a href="#" class="lista__rodape__link">Alura LATAM</a></li>
+            <li class="lista__rodape__item"><img src="./img/AluraStart.png" alt="Logo da Alura Start" ><a href="#" class="lista__rodape__link">Alura Start</a></li>
+            <li class="lista__rodape__item"><img src="./img/MusicDot.png" alt="Logo da MusicDot" ><a href="#" class="lista__rodape__link">MusicDot</a></li>
+            <li class="lista__rodape__item"><img src="./img/AluraLingua.png" alt="Logo da Alura Lingua" ><a href="#" class="lista__rodape__link">Alura Lingua</a></li>
+            <li class="lista__rodape__item"><img src="./img/PM3.png" alt="Logo da PM3" ><a href="#" class="lista__rodape__link">PM3</a></li>
+        </ul>
+        <ul class="lista__rodape">
+            <li class="lista__rodape__titulo">
+                Comunidade
+            </li>
+            <li class="lista__rodape__item"><img src="./img/HipstersTech.png" alt="Logo da HipstersTech" ><a href="#" class="lista__rodape__link">Hipster ponto Tech</a></li>
+            <li class="lista__rodape__item"><img src="./img/Scuba.png" alt="Logo da Scuba Dev" ><a href="#" class="lista__rodape__link">Scuba DEV</a></li>
+            <li class="lista__rodape__item"><img src="./img/Layers.png" alt="Logo da Layers ponto Tech" ><a href="#" class="lista__rodape__link">Layers ponto Tech</a></li>
+            <li class="lista__rodape__item"><img src="./img/LikeABoss.png" alt="Logo da Like a Boss" ><a href="#" class="lista__rodape__link">Like a Boss</a></li>
+            <li class="lista__rodape__item"><img src="./img/CarreiraSemFronteira.png" alt="Logo da Carreira sem Fronteira" ><a href="#" class="lista__rodape__link">Carreira sem Fronteira</a></li>
+            <li class="lista__rodape__item"><img src="./img/HipstersJobs.png" alt="Logo da Hipsters ponto Jobs" ><a href="#" class="lista__rodape__link">Hipsters ponto Jobs</a></li>
+            <li class="lista__rodape__item"><img src="./img/GUJ.png" alt="Logo da GUJ" ><a href="#" class="lista__rodape__link">GUJ</a></li>
+        </ul>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
